--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 Sphinx==1.2.2
 beautifulsoup4==4.3.2
 nose==1.3.1
-pandas==0.13.1
+pandas==0.14.1
 python-dateutil==2.2
-pytz==2014.2
+pytz
 requests==2.2.1
 xlrd==0.9.2
 celery>=3.1
