--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.db
 celerybeat-schedule
 .env
+env.sh
 
 # C extensions
 *.so
@@ -39,3 +40,7 @@ nosetests.xml
 .mr.developer.cfg
 .project
 .pydevproject
+
+# database files
+*.csv
+*.dump
