--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,10 @@ pip-log.txt
 
 # Unit test / coverage reports
 .coverage
+.coveragerc
 .tox
 nosetests.xml
+htmlcov/*
 
 # Translations
 *.mo
@@ -46,5 +48,3 @@ nosetests.xml
 *.dump
 *.sqlite
 
-# coverage files
-htmlcov
