--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ install:
   - source activate test-environment
   - python setup.py install
   - pip install -r requirements.txt
+  - pip install certifi
   - pip install coveralls
 script: nosetests
 deploy:
