--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,6 @@ python:
 - '3.4'
 env:
   global:
-    - secure: "lmQwPQ1dNFpe1FuV3qm8HGb6HqM+Ygh5tFECOCyKicM/kiBmFvExYYq//3xeKbKdDP9UAnAVQJZFC35cKjJd4qldatvsRLuEkWNrDtZbrKPb2XsRGZNEZB0cQC8TDQ+KUliIvdYn0Vxk8OUnBA2YTKE6JsRdpCU4laPamnaw6r4="
-    - secure: "DXAME8FP8ZM82EMUBwEWNlzDf8i4u8RJ5K1T1/BygOJcwfrB46lll8RR2q2ZOl7YB7zIjXmP+6kWEWd+hNZ4iYkbbIQfmf7bOzwh42fKhbXC4hV52g7w/LuVLx/K+6M0ccG8/7uA55bi6mnCkhVK4hP6+Y7YoQ9x1tA92iBeF4M="
 install:
 
      # Install miniconda for python 2.7
@@ -25,7 +23,6 @@ install:
   - source activate test-environment
   - python setup.py install
   - pip install -r requirements.txt
-  - pip install certifi
   - pip install coveralls
 script: nosetests
 deploy:
@@ -37,4 +34,4 @@ deploy:
     tags: true
     repo: WattTime/pyiso
 after_success:
-  - coveralls
+e - coveralls
