--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
 - '2.7'
 - '3.4'
+
 install:
 
      # Install miniconda for python 2.7
@@ -32,4 +33,4 @@ deploy:
     tags: true
     repo: WattTime/pyiso
 after_success:
-e - coveralls
+  - coveralls
