--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-Sphinx==1.2.2
 beautifulsoup4==4.5.0
+celery>=3.1
+certifi
+html5lib
+libfaketime
+lxml==3.6.1
+mock
+nose-timer
 nose==1.3.1
 pandas>=0.18
+parameterized
 python-dateutil==2.2
 pytz
-requests==2.9.1
-celery>=3.1
-xlrd
-lxml==3.6.1
-html5lib
 requests-cache
-mock
 requests-mock
-parameterized
-libfaketime
-certifi
+requests==2.9.1
+Sphinx==1.2.2
+xlrd
