Further to issue 130, move tests, alter travis.yml
While we are cleaning up, move obvious unit tests into the unit
subdirectory and get Travis to only test unit tests on commit.

More work needs to be done to separate integration from unit tests
for each BA class.  Some are not that clearly defined.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
   - python setup.py install
   - pip install -r requirements.txt
   - pip install coveralls
-script: nosetests
+script: nosetests ./tests/unit/
 deploy:
   provider: pypi
   user: Anna.Schneider
