#130 Add usage of coverage plugin to nosetests call from Travis.
This should create a coverage report which can be sent via the
coveralls build steps in travis.yml

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,11 +1,12 @@
 # .coveragerc to control coverage.py
 [run]
 source=
-    .
+    pyiso
 omit=
     */tests/*
     */tests.py
     *__init__.py
+    */venv/*
     *.virtualenvs*
     *script.py
 
