#163 Allow newer versions of Sphinx and nose packages.
The version numbers used have been the same since they were added in 2014 in commit baa264cad02ff651fdedc024a86fb39ceae0df9c, when everything seemed to be specified with an exact version number.

Considering they're only used for tests and documentation, I'm going to leave the version number completely unspecified. I can't imagine pyiso is that sensitive.

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ libfaketime
 lxml==3.6.4
 mock
 nose-timer
-nose==1.3.1
+nose
 pandas>=0.18,<0.21
 parameterized
 python-dateutil
@@ -15,5 +15,5 @@ pytz
 requests-cache
 requests-mock
 requests
-Sphinx==1.2.2
+Sphinx
 xlrd
